/*
 * $Id: ChangeLog,v 1.2382 2004/02/23 18:23:41 mlombardo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-23 01:45 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * doc/howtoext.txt
     + Added Section 1, 9 - 11
     ! Fixed some typos

2004-02-23 22:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/winprn/tprint.prg
    ! fix memory leaks.

2004-02-23 20:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    ! fix memory leaks on non Borland compiler

2004-02-23 17:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/descend.c
  * source/rtl/datec.c
  * source/rtl/dateshb.c
  * source/rtl/memofile.c
  * source/rtl/minmax.c
  * source/rtl/mtran.c
  * source/rtl/gx.c
  * source/rtl/hardcr.c
  * source/rtl/gtcgi/cgiread.c
  * source/rdd/workarea.c
  * source/rdd/dbfdbt/dbfdbt1.c
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/vm/itemapi.c
  * source/vm/estack.c
  * source/vm/errorapi.c
  * source/vm/hbi18n.c
  * source/vm/arrays.c
  * source/vm/asort.c
  * source/vm/memvars.c
    % a few left out on optimization to directly use member of PHB_ITEM

2004-02-23 15:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/binnum.c
  * source/rtl/binnumx.c
  * source/rtl/descend.c
  * source/rtl/direct.c
  * source/rtl/strtran.c
  * source/rtl/natmsg.c
  * source/rtl/oemansi.c
  * source/rtl/set.c
  * source/rtl/soundex.c
  * source/rtl/transfrm.c
  * source/rtl/substr.c
  * source/rtl/val.c
  * source/rtl/gtgraph.c
  * source/rtl/hbxml.c
  * source/rtl/filestat.c
  * source/rtl/hboutdbg.c
  * source/rtl/hbcomprs.c
  * source/rdd/dbcmd.c
  * source/rdd/dbf1.c
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbfntx/dbfntx1.c
  * source/vm/arrays.c
  * source/vm/do.c
  * source/vm/eval.c
  * source/vm/thread.c
  * source/vm/memvars.c